WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238836
NBSP characters drawn in fonts that don't support the space character turn into boxes
https://bugs.webkit.org/show_bug.cgi?id=238836
Summary
NBSP characters drawn in fonts that don't support the space character turn in...
Myles C. Maxfield
Reported
2022-04-05 14:19:49 PDT
NBSP characters drawn in fonts that don't support the space character turn into boxes
Attachments
Patch
(22.83 KB, patch)
2022-04-05 14:43 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-04-05 14:43:48 PDT
Created
attachment 456747
[details]
Patch
Myles C. Maxfield
Comment 2
2022-04-05 14:43:51 PDT
<
rdar://problem/91130503
>
EWS
Comment 3
2022-04-06 19:45:23 PDT
Committed
r292522
(
249360@main
): <
https://commits.webkit.org/249360@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456747
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug