Source/WebCore/platform/graphics/WidthIterator.cpp
@@ -558,7 +558,7 @@ void WidthIterator::applyCSSVisibilityRules(GlyphBuffer& glyphBuffer, unsigned g
 
     float yPosition = height(glyphBuffer.initialAdvance());
 
-    auto adjustForSyntheticBold = [&] (auto index) {
+    auto adjustForSyntheticBold = [&](auto index) {
         auto glyph = glyphBuffer.glyphAt(index);
         static constexpr const GlyphBufferGlyph deletedGlyph = 0xFFFF;
         auto syntheticBoldOffset = glyph == deletedGlyph ? 0 : glyphBuffer.fontAt(index).syntheticBoldOffset();
@@ -567,7 +567,7 @@ void WidthIterator::applyCSSVisibilityRules(GlyphBuffer& glyphBuffer, unsigned g
         setWidth(advance, width(advance) + syntheticBoldOffset);
     };
 
-    auto clobberGlyph = [&] (auto index, auto newGlyph) {
+    auto clobberGlyph = [&](auto index, auto newGlyph) {
         glyphBuffer.glyphs(index)[0] = newGlyph;
     };
 
@@ -575,16 +575,20 @@ void WidthIterator::applyCSSVisibilityRules(GlyphBuffer& glyphBuffer, unsigned g
     // applied. If the last glyph in a run needs to have its advance clobbered, but the next run has an initial advance, we need
     // to apply the initial advance on the new clobbered advance, rather than clobbering the initial advance entirely.
 
-    auto clobberAdvance = [&] (auto index, auto newAdvance) {
+    auto clobberAdvance = [&](auto index, auto newAdvance) {
         auto advanceBeforeClobbering = glyphBuffer.advanceAt(index);
         glyphBuffer.advances(index)[0] = makeGlyphBufferAdvance(newAdvance, height(advanceBeforeClobbering));
         m_runWidthSoFar += width(glyphBuffer.advanceAt(index)) - width(advanceBeforeClobbering);
         glyphBuffer.origins(index)[0] = makeGlyphBufferOrigin(0, -yPosition);
     };
 
-    auto deleteGlyph = [&] (auto index) {
+    auto deleteGlyph = [&](auto index) {
         m_runWidthSoFar -= width(glyphBuffer.advanceAt(index));
         glyphBuffer.deleteGlyphWithoutAffectingSize(index);
+    };
+
+    auto makeGlyphInvisible = [&](auto index) {
+        glyphBuffer.makeGlyphInvisible(index);
     };
 
     for (unsigned i = glyphBufferStartIndex; i < glyphBuffer.size(); yPosition += height(glyphBuffer.advanceAt(i)), ++i) {
@@ -596,11 +600,18 @@ void WidthIterator::applyCSSVisibilityRules(GlyphBuffer& glyphBuffer, unsigned g
         switch (characterResponsibleForThisGlyph) {
         case newlineCharacter:
         case carriageReturn:
-        case noBreakSpace:
-        case tabCharacter:
             ASSERT(glyphBuffer.fonts(i)[0]);
-            // FIXME: Is this actually necessary? If the font specifically has a glyph for NBSP, I don't see a reason not to use it.
-            clobberGlyph(i, glyphBuffer.fontAt(i).spaceGlyph());
+            // FIXME: It isn't quite right to use the space glyph here, because the space character may be supposed to render with a totally unrelated font (because of fallback).
+            // Instead, we should probably somehow have the caller pass in a Font/glyph pair to use in this situation.
+            if (auto spaceGlyph = glyphBuffer.fontAt(i).spaceGlyph())
+                clobberGlyph(i, spaceGlyph);
+            adjustForSyntheticBold(i);
+            continue;
+        case noBreakSpace:
+            adjustForSyntheticBold(i);
+            continue;
+        case tabCharacter:
+            makeGlyphInvisible(i);
             adjustForSyntheticBold(i);
             continue;
         }
